# LSTM-Seq2Seq

./: .gitignore  README.md  pyproject.toml  run_sweep.py
src/lstm_seq2seq/: cli.py  data.py  infer.py  model.py  train.py
